--- a/configuration.yml
+++ b/configuration.yml
@@ -1,7 +1,7 @@
 #Changing settings here have no effect.  Please copy and paste this into ~/.siriproxy to make the configurations work.
 
 - name: 'Logic'
-  path: (The location of the plugin) e.g. '~/SiriProxy/plugins/SiriProxy-Logic' or you can use the github link for the latest updates 'git://github.com/Deanmv/Dissertation.git'
-  machine: ' ' e.g. studio-mac.local
+  path: 'The location of the plugin' #e.g. '~/SiriProxy/plugins/SiriProxy-Logic' or you can use the github link for the latest updates 'git://github.com/Deanmv/Dissertation.git'
+  machine: ' ' #e.g. studio-mac.local for a remote machine or just use 'local' for a machine running SiriProxy AND the Server.
   
 #Then update with 'rvmsudo siriproxy bundle'
